More mobile optimization - fix for vertical alignment falling off the top of the screen when too tall

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,6 +53,7 @@ p {
 }
 
 .vertical-align {
+    max-height: 100%;
     position: relative;
     top: 50%;
     -moz-transform: translateY(-50%);
@@ -309,7 +310,7 @@ p {
         li {
             float: left;
             font-weight: 500;
-            margin-right: 20px;
+            margin: 0 20px 10px 0;
         }
 
     }
@@ -337,6 +338,12 @@ p {
     &.info-wrapper-open {
         @extend .bounceInRight;
         left: 80px;
+        -webkit-transition: left 0.25s;
+        transition: left 0.25s;
+
+        @media screen and (max-width: 670px) {
+            left: 0;
+        }
     }
 
     &.info-wrapper-closing {
